Fix dropdown spacing

--- a/styles.css
+++ b/styles.css
@@ -603,6 +603,7 @@ section#about img {
         padding: 0;
         justify-content: center;
         color: white;
+        margin-top: 1.2rem;
     }
     #dropdown li {
         border-bottom: 0.1px solid white;
